# l7nh_c

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat  soem_l7nh_win32.c  soem_l7nh_win32_v2.c  프로젝트개요.ini
src/: main.c  main_new.c
